Statusbar logging and refactoring, all headers rewritten using forward declarations  - CoreGraph renamed to SceneGraph and refactored  - propagation of camera atribute (from ViewerQT to Edge) modified  - createTexture and readTextureFromFile moved from DataHelper to TextureWrapper  - showing various events (layout status, picked objects ...) on statusbar  - forward declaration used where possible to shorten partial compilation time  - FRAlgorithm no longer needs to be deleted when loading new graph

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ SET(SOURCES_H
 	./include/Window/OptionsWindow.h
 	./include/Window/CheckBoxList.h
 	./include/Viewer/PickHandler.h
+	./include/Model/FRAlgorithm.h
 )
 
 # toto makro spracuje Q_OBJECT a vygeneruje novy cpp subor, ktory bude dostupny v ${SOURCES_H_MOC} premennej
