Large PickHandler modification  - timer postponing push events removed  	- better picking results without timer  - enums used for enumerations of constats  	- classes InputMode and SelectionType changed to enums  	- InputMode::NONE and MULTI merged to one mode (SELECT)  - modifier keys retrieval changed  	- flags not stored in isShiftPressed etc.  	- osgGA::GUIEventAdapter::getModKeyMask() enables us to get modifier key even for mouse events (original getKey() worked only for keyUp/Down events) 	- SHIFT is used to both add and remove selected nodes  - rubber rectangle ("selection quad") creation optimized  	- not created with every push, one instace is reused  	- osg::Node::setNodeMask() used to hide/unhide quad group  - edge picking not implemented!
Other changes
 - experimental node expansion (single jpeg for all images)
 - statusbar logging changed form signal/slot to static method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,14 +91,13 @@ ADD_SUBDIRECTORY(dependencies/Source)
 FILE(GLOB_RECURSE SRC  "src/*.cpp")
 FILE(GLOB_RECURSE INCL "include/*.h")
 
-# .h subor, ktory obsahuje Q_OBJECT
+# .h subory, ktore obsahuju Q_OBJECT
 SET(SOURCES_H 
 	./include/OsgQtBrowser/QGraphicsViewAdapter.h 
 	./include/Window/CoreWindow.h
 	./include/Window/OptionsWindow.h
 	./include/Window/CheckBoxList.h
 	./include/Viewer/PickHandler.h
-	./include/Model/FRAlgorithm.h
 )
 
 # toto makro spracuje Q_OBJECT a vygeneruje novy cpp subor, ktory bude dostupny v ${SOURCES_H_MOC} premennej
