Algorithms improvements Antioverlapping improved  - projective forces are linear and have appropriate sizes  - does not affect nodes that are not visible F-R algorithm tweaked  - some constants modified to improve layouting speed  - layout constants are read from config file (on startup only)  - removed use of "universe size" i.e. 300 Edges refactoring  - stateset shared among edges  - label visibility handling moved from Vwr::SceneGraph to Model::Edge Other  - stopping timer in Window::ViewerQT destructor

--- a/config/config
+++ b/config/config
@@ -1,7 +1,12 @@
 GraphMLParser.edgeTypeAttribute=relation
 GraphMLParser.nodeTypeAttribute=type
+Layout.Algorithm.Alpha=0.05
+Layout.Algorithm.MaxDistance=400.0
+Layout.Algorithm.MaxMovement=90.0
+Layout.Algorithm.MinMovement=0.05
 Layout.Thread.ProcessSleepTime=0
 Layout.Thread.StartSleepTime=1
+Mouse.DoubleClickTime=250
 Viewer.CameraManipulator.MaxSpeed=500.0
 Viewer.CameraManipulator.Sensitivity=0.6
 Viewer.Display.BackGround.B=190
@@ -17,8 +22,7 @@ Viewer.PickHandler.PickedEdgeDistance=200.0
 Viewer.Textures.DefaultNodeScale=8
 Viewer.Textures.Edge=img/Edge.png
 Viewer.Textures.EdgeScale=2
+Viewer.Textures.MetaNode=img/MetaNode.png
 Viewer.Textures.Node=img/node.png
 Viewer.Textures.OrientedEdgePrefix=img/arrows/arrow
 Viewer.Textures.OrientedEdgeSuffix=.png
-Viewer.Textures.MetaNode=img/MetaNode.png
-Mouse.DoubleClickTime=250
