GUI additions and changes (CoreWindow)  - unused buttons removed  - all buttons changed to QActions (toolbar face-lift)  - some icons added (from previous projects)  - recent files listed in menu (copy paste from TrollEdit)  - slots and file loading refactored Resources management  - textures and icons moved into img/texture and img/icons folders  - config modified accordingly

--- a/config/config
+++ b/config/config
@@ -19,8 +19,8 @@ Viewer.Display.ViewDistance=10000.0
 Viewer.Labels.Font=
 Viewer.PickHandler.PickedEdgeDistance=200.0
 Viewer.Textures.DefaultNodeScale=8
-Viewer.Textures.Edge=img/Edge.png
+Viewer.Textures.Edge=img/texture/edge.png
 Viewer.Textures.EdgeScale=2
-Viewer.Textures.Node=img/node.png
-Viewer.Textures.OrientedEdgePrefix=img/arrows/arrow
+Viewer.Textures.Node=img/texture/node.png
+Viewer.Textures.OrientedEdgePrefix=img/texture/arrows/arrow
 Viewer.Textures.OrientedEdgeSuffix=.png
