Camera oriented matrix transformations moved to Util::CameraHelper  - removed methods from PickHandler, OsgFrame, SceneGraph, OsgNode  - removed SceneGraph reference from OsgEdge and OsgNode  - removed Camera reference from SceneGraph

--- a/config/config
+++ b/config/config
@@ -24,3 +24,4 @@ Viewer.Textures.EdgeScale=2
 Viewer.Textures.Node=img/texture/node.png
 Viewer.Textures.OrientedEdgePrefix=img/texture/arrows/arrow
 Viewer.Textures.OrientedEdgeSuffix=.png
+Viewer.Node.MaxScale=4
