Frame with controls modified  - implemented as postrendered HUD  - frame available for multiple nodes (OsgNodeGroup)  - node->frame comunication replaced by signals/slots  - nodes are properly deselected  - 2 new frame buttons New signals  - AbstractNode sends signals changedPosition(old, new) and changedSize(old, new)  - OsgNodeGroup (composite) sends nodeAdded(node) and nodeRemoved(node)  - OsgNodeGroup resends signals of children  - CoreWindow sends windowResized() signal received by PickHandler (to adjust OsgFrame HUD projection) Other  - selection quad in PickHandler simplified using CameraHelper::getProjectionMatrix() Bug fixes  - when layout is paused and then new graph is loaded, layout stays paused

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,9 @@ SET(SOURCES_H
 	./include/Window/OptionsWindow.h
 	./include/Window/CheckBoxList.h
 	./include/Viewer/PickHandler.h
+	./include/Viewer/AbstractNode.h
+	./include/Viewer/OsgNodeGroup.h
+	./include/Viewer/OsgFrame.h
 )
 
 # toto makro spracuje Q_OBJECT a vygeneruje novy cpp subor, ktory bude dostupny v ${SOURCES_H_MOC} premennej
