--- a/config/config
+++ b/config/config
@@ -9,9 +9,8 @@ Layout.Thread.StartSleepTime=100
 Mouse.DoubleClickTime=250
 Viewer.CameraManipulator.MaxSpeed=500.0
 Viewer.CameraManipulator.Sensitivity=0.6
-Viewer.Display.BackGround.B=190
-Viewer.Display.BackGround.G=190
-Viewer.Display.BackGround.R=190
+Viewer.Display.BackGround1=170,170,170,255
+Viewer.Display.BackGround2=230,230,230,255
 Viewer.Display.InterpolationSpeed=0.05
 Viewer.Display.NodesAlwaysOnTop=0
 Viewer.Display.Stereoscopic=0
@@ -24,4 +23,7 @@ Viewer.Textures.EdgeScale=2
 Viewer.Textures.Node=img/texture/node.png
 Viewer.Textures.OrientedEdgePrefix=img/texture/arrows/arrow
 Viewer.Textures.OrientedEdgeSuffix=.png
+Viewer.Node.Color=20,20,20,255
+Viewer.Edge.Color=20,20,20,230
+Viewer.Selected.Color=0,255,0,240
 Viewer.Node.MaxScale=4
