Added dialog for data mapping  - Window::DataMappingDialog  - keys read from graphml can be mapped to node/edge visual attributes (color and content)  - createMapping moved from SceneGraph to CoreWindow  - default list of colors added to Model::Type Bug fixes  - graph initialization in SceneGraph Other  - reload file action

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ SET(SOURCES_H
 	./include/Window/CoreWindow.h
 	./include/Window/OptionsWindow.h
 	./include/Window/CheckBoxList.h
+	./include/Window/DataMappingDialog.h	
 	./include/Viewer/PickHandler.h
 	./include/Viewer/AbstractNode.h
 	./include/Viewer/OsgNodeGroup.h
