Edge labels, improved mapping dialog  - OsgEdge labels are displayed  - Old mappings are be shown when mapping dialog is opened  - OsgEdge width depends on its length and weight

--- a/config/config
+++ b/config/config
@@ -14,12 +14,13 @@ Viewer.Display.NodesAlwaysOnTop=0
 Viewer.Display.Stereoscopic=0
 Viewer.Display.ViewDistance=10000.0
 Viewer.Labels.Font=
+Viewer.Labels.Size=12
 Viewer.Textures.DefaultNodeScale=8
 Viewer.Textures.Edge=img/texture/edge.png
-Viewer.Textures.EdgeScale=2
 Viewer.Textures.Node=img/texture/node.png
 Viewer.Textures.OrientedEdgePrefix=img/texture/arrows/arrow
 Viewer.Textures.OrientedEdgeSuffix=.png
+Viewer.Edge.Volume=150
 Viewer.Node.Color=240,240,240,255
 Viewer.Edge.Color=240,240,240,230
 Viewer.Selected.Color=0,255,0,240
