Node frame and border improved  - separate frame for closed and visual content  - graphic properties moved from Type to DataMapping  - scaling properties made consistent

--- a/config/config
+++ b/config/config
@@ -15,9 +15,11 @@ Viewer.Display.Stereoscopic=0
 Viewer.Display.ViewDistance=10000.0
 Viewer.Labels.Font=
 Viewer.Labels.Size=12
-Viewer.Textures.DefaultNodeScale=8
+Viewer.Node.Scale=2
+Viewer.Edge.Scale=1
 Viewer.Textures.Edge=img/texture/edge.png
 Viewer.Textures.Node=img/texture/node.png
+Viewer.Textures.Frame=img/texture/frame.png
 Viewer.Textures.OrientedEdgePrefix=img/texture/arrows/arrow
 Viewer.Textures.OrientedEdgeSuffix=.png
 Viewer.Edge.Volume=150
