Clustering  - trivial random clustering implemented in Model::Graph  - cluster/uncluster methods in Model::Node and Vwr::OsgNode  - contunuous cluster/uncluster transitions  - buttons for cluster/uncluster in BasicButtons Layouting  - force computation split (standard + projective)  - whole algorithm adjusted for clusters  - applied force divided by node/cluster weight Vwr::OsgNodeGroup  - proper memory management & identification Other  - oriented/directed -> directed (terminology unification)  - possible to switch off directed textures in config file  - formatting cleanup in header files (Edge, Node, Graph)  - equals() and toString() added to AbstractNode  - ControlFrame has minimal size  - Node::getId() and Node::data::value("id") made consistent (Edge too)

--- a/config/config
+++ b/config/config
@@ -20,9 +20,10 @@ Viewer.Edge.Scale=1
 Viewer.Textures.Edge=img/texture/edge.png
 Viewer.Textures.Node=img/texture/node.png
 Viewer.Textures.Frame=img/texture/frame.png
-Viewer.Textures.OrientedEdgePrefix=img/texture/arrows/arrow
-Viewer.Textures.OrientedEdgeSuffix=.png
+Viewer.Textures.DirectedEdgePrefix=img/texture/arrows/arrow
+Viewer.Textures.DirectedEdgeSuffix=.png
 Viewer.Edge.Volume=150
+Viewer.Edge.ShowDirected=0
 Viewer.Node.Color=240,240,240,255
 Viewer.Edge.Color=240,240,240,230
 Viewer.Selected.Color=0,255,0,240
