Clustering improvements and new buttons Improved clustering  - clustering transitions are faster  - cluster continually grows  - clustering transitions block other clustering requests  - fixed: Node::getIncidentNodes returned self Layouting  - calm distance and flexibility added to config file  - random vector used when node distance is 0 Other  - closedFrame geode shared among OsgNodes

--- a/config/config
+++ b/config/config
@@ -2,6 +2,8 @@ Layout.Algorithm.Alpha=0.02
 Layout.Algorithm.MaxDistance=300.0
 Layout.Algorithm.MaxMovement=200.0
 Layout.Algorithm.MinMovement=0.3
+Layout.Algorithm.CalmDistance=30
+Layout.Algorithm.Flexibility=0.6
 Layout.Thread.ProcessSleepTime=0
 Layout.Thread.StartSleepTime=100
 Mouse.DoubleClickTime=250
@@ -9,7 +11,7 @@ Viewer.CameraManipulator.MaxSpeed=500.0
 Viewer.CameraManipulator.Sensitivity=0.6
 Viewer.Display.BackGround1=90,90,90,255
 Viewer.Display.BackGround2=0,0,0,255
-Viewer.Display.InterpolationSpeed=0.05
+Viewer.Display.InterpolationSpeed=0.07
 Viewer.Display.NodesAlwaysOnTop=0
 Viewer.Display.Stereoscopic=0
 Viewer.Display.ViewDistance=10000.0
@@ -26,5 +28,5 @@ Viewer.Edge.Volume=150
 Viewer.Edge.ShowDirected=0
 Viewer.Node.Color=240,240,240,255
 Viewer.Edge.Color=240,240,240,230
-Viewer.Selected.Color=0,255,0,240
+Viewer.Selected.Color=0,255,0,150
 Viewer.Node.MaxScale=4
