Improved cluster content  - grid or circle layout Other  - added default data mappings  - more available node colors

--- a/config/config
+++ b/config/config
@@ -13,7 +13,6 @@ Viewer.Display.BackGround1=90,90,90,255
 Viewer.Display.BackGround2=0,0,0,255
 Viewer.Display.InterpolationSpeed=0.07
 Viewer.Display.NodesAlwaysOnTop=0
-Viewer.Display.Stereoscopic=0
 Viewer.Display.ViewDistance=10000.0
 Viewer.Labels.Font=
 Viewer.Labels.Size=12
@@ -31,5 +30,7 @@ Viewer.Node.Color=240,240,240,255
 Viewer.Edge.Color=240,240,240,230
 Viewer.Selected.Color=0,255,0,150
 Viewer.Node.MaxScale=6
+Viewer.Node.GenerateRandomContent=1
+Viewer.Cluster.ContentInCircle=0
 Viewer.Clustering.ClusterThreshold=0.5
 Viewer.Clustering.AutoClustering=1
