--- a/config/config
+++ b/config/config
@@ -4,15 +4,14 @@ Layout.Algorithm.MaxMovement=200.0
 Layout.Algorithm.MinMovement=0.3
 Layout.Algorithm.CalmDistance=30
 Layout.Algorithm.Flexibility=0.6
-Layout.Thread.ProcessSleepTime=0
 Layout.Thread.StartSleepTime=100
-Mouse.DoubleClickTime=250
+Layout.Thread.ProcessSleepTime=0
 Viewer.CameraManipulator.MaxSpeed=500.0
 Viewer.CameraManipulator.Sensitivity=0.6
 Viewer.Display.BackGround1=100,100,100,255
+//Viewer.Display.BackGround1=0,0,0,255
 Viewer.Display.BackGround2=0,0,0,255
 Viewer.Display.InterpolationSpeed=0.07
-Viewer.Display.NodesAlwaysOnTop=0
 Viewer.Display.ViewDistance=10000.0
 Viewer.Labels.Font=
 Viewer.Labels.Size=12
@@ -25,12 +24,12 @@ Viewer.Textures.Frame=img/texture/frame.png
 Viewer.Textures.DirectedEdgePrefix=img/texture/arrows/arrow
 Viewer.Textures.DirectedEdgeSuffix=.png
 Viewer.Edge.Volume=150
-Viewer.Edge.ShowDirected=0
+Viewer.Edge.ShowDirected=1
 Viewer.Node.Color=240,240,240,255
 Viewer.Edge.Color=240,240,240,230
 Viewer.Selected.Color=0,255,0,150
 Viewer.Node.MaxScale=6
 Viewer.Node.GenerateRandomContent=1
 Viewer.Cluster.ContentInCircle=0
-Viewer.Clustering.ClusterThreshold=0.5
+Viewer.Clustering.ClusterThreshold=0.0
 Viewer.Clustering.AutoClustering=1
